# fermat

./: CMakeLists.txt  README.md  REFERENCE.md  install.sh  main.frmt  test_libs.frmt
lib/: algo.frmt  collections.frmt  complex.frmt  io.frmt  math.frmt
src/: AST.h  BorrowCheck.cpp  BorrowCheck.h  CodeGen.cpp  CodeGen.h  JIT.cpp  JIT.h  Lexer.cpp  Lexer.h  ModuleLoader.cpp  ModuleLoader.h  Parser.cpp  Parser.h  Runtime.cpp  main.cpp
